--- a/src/main/resources/view/apartment/apartment_edit.fxml
+++ b/src/main/resources/view/apartment/apartment_edit.fxml
@@ -5,23 +5,30 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="794.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.apartment.ApartmentEditController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="770.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.apartment.ApartmentEditController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="719.0" stylesheets="@../css/insert_fee.css">
+      <Pane prefHeight="400.0" prefWidth="772.0" stylesheets="@../css/insert_fee.css">
          <children>
-            <Pane prefHeight="354.0" prefWidth="328.0">
+            <Pane prefHeight="364.0" prefWidth="328.0">
                <children>
-                  <Button fx:id="SaveButton" layoutX="122.0" layoutY="243.0" mnemonicParsing="false" onAction="#handleSave" styleClass="submit-button" stylesheets="@../css/insert_fee.css" text="Summit" />
-                  <Button fx:id="cancelButton" layoutX="126.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="cancel-button" stylesheets="@../css/insert_fee.css" text="Cancel" />
+                  <ImageView fitHeight="372.0" fitWidth="505.0" layoutX="-31.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                             <Image url="@../images/apartment.png" />
+                          </image>
+                  </ImageView>
+                  <Button fx:id="SaveButton" layoutX="122.0" layoutY="292.0" mnemonicParsing="false" onAction="#handleSave" styleClass="submit-button" stylesheets="@../css/insert_fee.css" text="Summit" />
+                  <Button fx:id="cancelButton" layoutX="127.0" layoutY="331.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="cancel-button" stylesheets="@../css/insert_fee.css" text="Cancel" />
                   <VBox alignment="CENTER" layoutX="2.0" layoutY="356.0" prefHeight="45.0" prefWidth="326.0">
                      <children>
-                        <Label fx:id="statusLabel" text="Status" textAlignment="CENTER" />
+                        <Label fx:id="statusLabel" textAlignment="CENTER" />
                      </children>
                   </VBox>
                </children>
