--- a/src/main/resources/view/apartment/apartment_table.fxml
+++ b/src/main/resources/view/apartment/apartment_table.fxml
@@ -8,9 +8,16 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="496.0" prefWidth="874.0" stylesheets="@../css/table_fee.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.apartment.ApartmentViewController">
    <children>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Quản lí căn hộ">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Text>
       <HBox prefHeight="38.0" prefWidth="820.0" />
       <HBox alignment="CENTER" prefHeight="42.0" prefWidth="820.0" stylesheets="@../css/table_fee.css">
          <children>
