--- a/src/main/resources/view/fee/fee-management.fxml
+++ b/src/main/resources/view/fee/fee-management.fxml
@@ -7,12 +7,15 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.fee.FeeViewController">
-    <!-- Hàng 1: Nút Thêm Mới -->
-    <HBox alignment="CENTER_LEFT" spacing="10" stylesheets="@../css/table_fee.css">
-        <Button fx:id="addButton" onAction="#handleAdd" styleClass="new_button" stylesheets="@../css/table_fee.css" text="Thêm mới" />
-    </HBox>
+   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Quản lí khoản thu">
+      <font>
+         <Font name="System Bold" size="19.0" />
+      </font>
+   </Text>
 
     <!-- Hàng 2: Form lọc dữ liệu -->
     <HBox alignment="CENTER" spacing="10" stylesheets="@../css/table_fee.css">
@@ -27,21 +30,22 @@
 
         <Button fx:id="searchButton" onAction="#handleSearch" text="Tìm kiếm" />
         <Button fx:id="resetButton" onAction="#handleReset" text="Xem tất cả" />
+        <Button fx:id="addButton" onAction="#handleAdd" styleClass="new_button" stylesheets="@../css/table_fee.css" text="Thêm mới" textFill="WHITE" />
     </HBox>
     <!-- TableView hiển thị danh sách Fee -->
     <TableView fx:id="feeTable" stylesheets="@../css/table_fee.css">
         <columns>
-            <TableColumn fx:id="idColumn" text="ID" />
-            <TableColumn fx:id="categoryColumn" text="Loại khoản thu" />
-            <TableColumn fx:id="subCategoryColumn" text="Nhóm khoản thu" />
-            <TableColumn fx:id="amountColumn" text="Số tiền" />
-            <TableColumn fx:id="unitColumn" text="Đơn vị tính" />
-            <TableColumn fx:id="billPeriodColumn" text="Kỳ thanh toán" />
+            <TableColumn fx:id="idColumn" style="-fx-alignment: CENTER;" text="ID" />
+            <TableColumn fx:id="categoryColumn" style="-fx-alignment: CENTER;" text="Loại khoản thu" />
+            <TableColumn fx:id="subCategoryColumn" style="-fx-alignment: CENTER;" text="Nhóm khoản thu" />
+            <TableColumn fx:id="amountColumn" style="-fx-alignment: CENTER;" text="Số tiền" />
+            <TableColumn fx:id="unitColumn" style="-fx-alignment: CENTER;" text="Đơn vị tính" />
+            <TableColumn fx:id="billPeriodColumn" style="-fx-alignment: CENTER;" text="Kỳ thanh toán" />
             <!--            <TableColumn fx:id="descriptionColumn" text="Mô tả" />-->
-            <TableColumn fx:id="startDateColumn" text="Ngày bắt đầu" />
-            <TableColumn fx:id="endDateColumn" text="Ngày kết thúc" />
-            <TableColumn fx:id="viewDetailColumn" text="Chi tiết" />
-            <TableColumn fx:id="actionColumn" text="Thao tác" />
+            <TableColumn fx:id="startDateColumn" style="-fx-alignment: CENTER;" text="Ngày bắt đầu" />
+            <TableColumn fx:id="endDateColumn" style="-fx-alignment: CENTER;" text="Ngày kết thúc" />
+            <TableColumn fx:id="viewDetailColumn" style="-fx-alignment: CENTER;" text="Chi tiết" />
+            <TableColumn fx:id="actionColumn" style="-fx-alignment: CENTER;" text="Thao tác" />
             <!-- Sửa tiêu đề để phù hợp -->
         </columns>
     </TableView>
