--- a/src/main/resources/view/homepage/home-management.fxml
+++ b/src/main/resources/view/homepage/home-management.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.home.HomeViewController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="642.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <Text fill="#1c4b93" layoutX="292.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phần mềm quản lí chung cư">
+      <font>
+         <Font name="System Bold" size="28.0" />
+      </font>
+   </Text>
+    <ImageView fitHeight="725.0" fitWidth="950.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../images/chungcubluemoon.jpg" />
+        </image>
+    </ImageView>
 </AnchorPane>
