--- a/src/main/resources/view/resident/resident_edit.fxml
+++ b/src/main/resources/view/resident/resident_edit.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -16,13 +18,18 @@
     <children>
         <Pane prefHeight="400.0" prefWidth="719.0" stylesheets="@../css/insert_fee.css">
             <children>
-                <Pane prefHeight="354.0" prefWidth="328.0">
+                <Pane prefHeight="400.0" prefWidth="328.0">
                     <children>
-                        <Button fx:id="saveButton" layoutX="122.0" layoutY="243.0" mnemonicParsing="false" onAction="#handleSave" styleClass="submit-button" stylesheets="@../css/insert_fee.css" text="Summit" />
-                        <Button fx:id="cancleButton" layoutX="126.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="cancel-button" stylesheets="@../css/insert_fee.css" text="Cancel" />
+                        <ImageView fitHeight="263.0" fitWidth="265.0" layoutX="31.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../images/HomePage/avt.jpg" />
+                            </image>
+                        </ImageView>
+                        <Button fx:id="saveButton" layoutX="116.0" layoutY="297.0" mnemonicParsing="false" onAction="#handleSave" styleClass="submit-button" stylesheets="@../css/insert_fee.css" text="Xác nhận" />
+                        <Button fx:id="cancleButton" layoutX="121.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="cancel-button" stylesheets="@../css/insert_fee.css" text="Hủy bỏ " />
                         <VBox alignment="CENTER" layoutX="2.0" layoutY="356.0" prefHeight="45.0" prefWidth="326.0">
                             <children>
-                                <Label fx:id="statusLabel" text="Status" textAlignment="CENTER" />
+                                <Label fx:id="statusLabel" textAlignment="CENTER" />
                             </children>
                         </VBox>
                     </children>
