--- a/src/main/resources/view/fee/fee_insert.fxml
+++ b/src/main/resources/view/fee/fee_insert.fxml
@@ -76,10 +76,10 @@
                 <children>
 
                     <!-- Label hiển thị trạng thái -->
-                    <Label fx:id="statusLabel" layoutX="153.0" layoutY="348.0" prefHeight="17.0" prefWidth="93.0" />
-                    <Button fx:id="saveButton" layoutX="145.0" layoutY="233.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="33.0" prefWidth="109.0" style="-fx-border-radius: 300;" styleClass="submit-button" stylesheets="@../css/insert_fee.css" text="Submit" />
-                    <Button fx:id="cancelButton" layoutX="162.0" layoutY="287.0" onAction="#handleCancel" styleClass="cancel-button" stylesheets="@../css/insert_fee.css" text="Cancel" />
-                    <ImageView fitHeight="186.0" fitWidth="212.0" layoutX="107.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+                    <Label fx:id="statusLabel" alignment="CENTER" layoutX="6.0" layoutY="348.0" prefHeight="27.0" prefWidth="386.0" />
+                    <Button fx:id="saveButton" layoutX="145.0" layoutY="256.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="33.0" prefWidth="109.0" style="-fx-border-radius: 300;" styleClass="submit-button" stylesheets="@../css/insert_fee.css" text="Submit" />
+                    <Button fx:id="cancelButton" layoutX="162.0" layoutY="302.0" onAction="#handleCancel" styleClass="cancel-button" stylesheets="@../css/insert_fee.css" text="Cancel" />
+                    <ImageView fitHeight="186.0" fitWidth="212.0" layoutX="107.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
                         <image>
                             <Image url="@../images/HomePage/icons8-apartment-100.png" />
                         </image>
